@@ -14,6 +14,7 @@ version <next>:
 - MediaCodec hwaccel
 - True Audio (TTA) muxer
 - crystalizer audio filter
+- acrusher audio filter
 
 
 version 3.1:
